--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
 @import "default.css";
 
+
+body,html {
+  overflow-x: hidden;
+}
+
 * [data-visible="desktop"] {
   display: none;
 }
 
 body {
   padding: 2rem;
-  position: relative;
+  /* position: relative; */
 }
 
 #app {
@@ -25,7 +30,7 @@ header {
 }
 
 header img {
-  width: 100%;
+  width: 70%;
   max-width: 40rem;
 }
 
@@ -38,7 +43,7 @@ header nav {
 .banner-container {
   position: relative;
 
-  margin-bottom: 3.2rem;
+  margin-bottom: 6rem;
 }
 
 .banner-container img {
@@ -79,179 +84,17 @@ main h2 {
 }
 
 .products-container {
-  margin-bottom: 7rem;
+  margin-bottom: 6rem;
 }
 
-/* .products-container {
-  margin-bottom: 3.2rem;
+.card {
+  max-width: 38rem;
 }
-
-.card-mobile h3 {
-  font-size: 1.5rem;
-  font-weight: 600;
-
-  align-items: center;
-}
-
-.container-info {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 7rem;
-
-  & .product-info {
-    display: flex;
-    flex-direction: column;
-    gap: 0.3rem;
-
-    & span {
-      font-size: 1.375rem;
-      font-weight: 600;
-    }
-  }
-
-  & .container-select {
-    & #category-select {
-      display: flex;
-      align-items: center;
-      gap: 0.56rem;
-
-      & label {
-        font-size: 1.25rem;
-        font-weight: 700;
-
-        cursor: pointer;
-      }
-
-      & #product-1:checked+#select-button #chevrons [data-lucide="chevron-down"],
-      & #product-2:checked+#select-button #chevrons [data-lucide="chevron-down"], 
-      & #product-3:checked+#select-button #chevrons [data-lucide="chevron-down"], 
-      & #product-4:checked+#select-button #chevrons [data-lucide="chevron-down"], 
-      & #product-5:checked+#select-button #chevrons [data-lucide="chevron-down"], 
-      & #product-6:checked+#select-button #chevrons [data-lucide="chevron-down"] {
-        display: none;
-      }
-
-      & #product-1:checked+#select-button #chevrons [data-lucide="chevron-up"],
-      & #product-2:checked+#select-button #chevrons [data-lucide="chevron-up"],
-      & #product-3:checked+#select-button #chevrons [data-lucide="chevron-up"],
-      & #product-4:checked+#select-button #chevrons [data-lucide="chevron-up"],
-      & #product-5:checked+#select-button #chevrons [data-lucide="chevron-up"],
-      & #product-6:checked+#select-button #chevrons [data-lucide="chevron-up"] {
-        display: block;
-      }
-
-      & #product-1,
-      & #product-2,
-      & #product-3,
-      & #product-4,
-      & #product-5,
-      & #product-6 {
-        all: unset;
-      }
-
-      &:has(#product-1:checked)+#option-1,
-      &:has(#product-2:checked)+#option-2,
-      &:has(#product-3:checked)+#option-3,
-      &:has(#product-4:checked)+#option-4,
-      &:has(#product-5:checked)+#option-5,
-      &:has(#product-6:checked)+#option-6 {
-        display: block;
-      }
-    }
-
-    & #chevrons {
-      display: flex;
-
-      & svg {
-        width: 1rem;
-        height: 1rem;
-      }
-
-      & [data-lucide="chevron-up"] {
-        display: none;
-      }
-    }
-
-    & .option-container {
-      margin-top: 0.75rem;
-
-      width: 11.75rem;
-
-      display: none;
-
-      z-index: 1;
-      position: absolute;
-
-      & span {
-        font-size: 0.875rem;
-        font-weight: 700;
-      }
-
-      & .option {
-        position: relative;
-
-        list-style: none;
-        padding: 0.625rem;
-
-        border-radius: 10px;
-        background-color: #fff;
-
-        &:has(input:checked),
-        &:hover {
-          background: #EBE7E7;
-        }
-
-
-        & input[type="radio"] {
-          all: unset;
-          inset: 0;
-
-          position: absolute;
-          cursor: pointer;
-        }
-      }
-    }
-  }
-
-  & button {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-
-    width: 8.88281rem;
-    height: 2.63794rem;
-
-    color: #FFF;
-    font-size: 1.125rem;
-    font-weight: 600;
-    text-transform: uppercase;
-
-    padding: 0.75rem 1.35rem;
-
-    border-radius: 10px;
-    border: 1px solid #000;
-    background: #000;
-  }
-}
-
-
-.swiper img{
-  width: 100%;
-}
-
-.swiper.nested-slider-h {
-  padding: 30px 0;
-}
-.nested-slider-h .nested-slider-child{
-  width: 100%;
-
-  margin-bottom: 2rem;
-} */
 
 .card-container {
   display: grid;
-  grid-template-columns: repeat(2, 45%);
+  grid-template-columns: repeat(2, 47%);
+
   justify-content: space-between;
 }
 
@@ -365,8 +208,8 @@ swiper-container::part(button-prev) {
   position: absolute;
 }
 
-.option-container  span {
-  font-size: 0.875rem;
+.option-container span {
+  font-size: 1.2rem;
   font-weight: 700;
 }
 
@@ -403,7 +246,7 @@ swiper-container::part(button-prev) {
   height: 2.63794rem;
 
   color: #FFF;
-  font-size: 1.125rem;
+  font-size: 1rem;
   font-weight: 600;
   text-transform: uppercase;
 
@@ -412,32 +255,17 @@ swiper-container::part(button-prev) {
   background: #000;
 }
 
-/* .card button {
-    width: 8.55981rem;
-    height: 1.83038rem;
-
-    font-size: 0.75rem;
-    font-weight: 300;
-    text-transform: uppercase;
-
-    float: right;
-
-    padding: 0.32rem;
-    background: none;
-
-    border-radius: 10px;
-    border: 0.5px solid #000;
-} */
-
 .materials-container {
   margin-bottom: 3.2rem;
 }
 
 .materials-container div {
   font-size: 1.6rem;
+  font-weight: 300;
+
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 3rem;
 }
 
 .about-container {
@@ -445,14 +273,16 @@ swiper-container::part(button-prev) {
 
   font-size: 1.6rem;
   color: #FFF;
+  font-weight: 300;
   
   padding: 7rem 0;
+  margin-bottom: 3.2rem;
 }
 
 .about-container div {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 4rem;
 }
 
 .about-container div:first-child {
@@ -480,13 +310,13 @@ swiper-container::part(button-prev) {
 
   z-index: -1;
 
-  margin-bottom: 3.2rem;
+  height: 100%;
 }
 
 .values { 
   display: flex;
   flex-direction: column;
-  gap: 2.5rem;
+  gap: 3rem;
 
   margin-bottom: 3.2rem;
 }
@@ -558,7 +388,7 @@ footer div {
 .social-media {
   display: flex;
   flex-direction: column;
-  gap: 1.1rem;
+  gap: 1.7rem;
 }
 
 .social-media span {
@@ -592,8 +422,129 @@ footer p {
   min-width: 9rem;
 }
 
+@media (min-width: 768px) {
+  body{ 
+    padding: 0 8.8rem;
+  }
 
+  #app {
+    margin: 7rem auto 0;
+  }
 
+  .banner-container div span:first-child {
+    font-size: 9rem;
+  }
+
+  .banner-container div {
+    font-size: 2.5rem;
+  }
+
+  .banner-container {
+    margin-bottom: 12.5rem;
+  }
+
+  main h2 {
+    font-size: 3rem;
+  }
+
+  .card h3 {
+    font-size: 2rem;
+    margin-top: 6rem;
+  }
+
+  .product-info span {
+    font-size: 2.2rem;
+  }
+
+  .option-container span {
+    font-size: 1.4rem;
+  }
+
+  #category-select {
+    gap: .5rem;
+  }
+
+  #category-select label {
+    font-size: 2.2rem;
+  }
+
+  #chevrons svg {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+
+  .container-info button {
+    font-size: 1.8rem;
+    max-width: 142px;
+    height: 42px;
+
+    padding: 2rem;
+  }
+
+  .materials-container div {
+    max-width: 58rem;
+    font-size: 2.5rem;
+  }
+
+  .materials-container {
+    margin-bottom: 17rem;
+  }
+
+  .about-container {
+    font-size: 2.5rem;
+    padding-bottom: 12rem;
+    margin-bottom: 12rem;
+  }
+
+  .about-container h2 {
+    font-size: 4rem;
+  }
+
+  .about-container div:first-child {
+    margin-bottom: 10rem;
+  }
+
+  .values-container {
+    max-width: 92rem;
+  }
+
+  .values-container:nth-child(2),
+  .values-container:nth-child(3) {
+    max-width: 75rem;
+  }
+
+  .values-container h3 {
+    font-size: 3rem;
+  }
+
+  .values-container p {
+    font-size: 2.5rem;
+  }
+
+  .values {
+    margin-bottom: 17.5rem;
+  }
+
+  footer {
+    padding: 4.7rem 0 3.8rem;
+  }
+
+  .logo-footer {
+    width: 16rem;
+  }
+
+  .social-media span {
+    font-size: 2.5rem;
+  }
+
+  .social-media .midias {
+    gap: 5rem;
+  }
+
+  footer p {
+    font-size: 2rem;
+  }
+}
 
 
 
